--- a/style.css
+++ b/style.css
@@ -1119,12 +1119,12 @@
     
 
     .footer_content3 {
-        margin-left: 20px;
+        margin-right: 30px;
    }
 
 
     .footer_content4 {
-        margin-left: 90px;
+        margin-left: 30px;
     }
 
 
@@ -1156,12 +1156,12 @@
 
      
      .footer_content3 {
-        margin-left: 20px;
+        margin-right: 30px;
     }
  
  
      .footer_content4 {
-         margin-left: 90px;
+         margin-left: 30px;
      }
  
 
