--- a/style.css
+++ b/style.css
@@ -1112,20 +1112,20 @@
      }
 
      .footer_content2 {
-        margin-top: 270px;
-        margin-left: 0px;
-    }
-
-    
-
-    .footer_content3 {
-        margin-right: 30px;
-   }
+         margin-top: 270px;
+         margin-left: 0px;
+     }
 
 
-    .footer_content4 {
-        margin-left: 30px;
-    }
+
+     .footer_content3 {
+         margin-right: 30px;
+     }
+
+
+     .footer_content4 {
+         margin-left: 30px;
+     }
 
 
      /* smoothies */
@@ -1154,22 +1154,23 @@
          margin-left: 0px;
      }
 
-     
+
      .footer_content3 {
-        margin-right: 30px;
-    }
- 
- 
+         margin-right: 30px;
+     }
+
+
      .footer_content4 {
          margin-left: 30px;
      }
- 
 
 
-     #icon_social, #icon_social2{
-            font-size: 18px;
-            padding-top: 20px;
-            padding-right: 10px;
+
+     #icon_social,
+     #icon_social2 {
+         font-size: 18px;
+         padding-top: 20px;
+         padding-right: 10px;
      }
 
      /* smoothies */
@@ -1223,32 +1224,33 @@
      }
 
      #Healthy_Meal_image {
-        height: 230px;
-        width: 230px;
+         height: 230px;
+         width: 230px;
          margin-left: 10px;
 
      }
 
      #Healthy_Tacos_image {
-        height: 230px;
+         height: 230px;
          width: 230px;
          margin-left: 10px;
      }
 
      #Iridinos_image {
-        height: 230px;
-        width: 230px;
+         height: 230px;
+         width: 230px;
          margin-left: 10px;
      }
 
      #Keto_Diet_image {
-        height: 230px;
-        width: 230px;;
+         height: 230px;
+         width: 230px;
+         ;
          margin-left: 10px;
      }
 
      #Sandwich_image {
-        height: 230px;
+         height: 230px;
          width: 230px;
          margin-left: 10px;
      }
@@ -1258,44 +1260,44 @@
 
 
      #karahi_img {
-        height: 230px;
-        width: 230px;
+         height: 230px;
+         width: 230px;
          margin-left: 10px;
      }
 
 
      #tikka_img {
-        height: 230px;
-        width: 230px;
+         height: 230px;
+         width: 230px;
          margin-left: 10px;
      }
 
 
      #Bihari_img {
-        height: 230px;
-        width: 230px;
+         height: 230px;
+         width: 230px;
          margin-left: 10px;
      }
 
 
 
      #nuggets_img {
-        height: 230px;
-        width: 230px;
+         height: 230px;
+         width: 230px;
          margin-left: 10px;
      }
 
 
      #biryani_img {
-        height: 230px;
-        width: 230px;
+         height: 230px;
+         width: 230px;
          margin-left: 10px;
      }
 
 
      #malai_img {
-        height: 230px;
-        width: 230px;
+         height: 230px;
+         width: 230px;
          margin-left: 10px;
      }
 
@@ -1315,8 +1317,8 @@
      }
 
      #cart_button button {
-        margin-left: 15px;
-    }
+         margin-left: 15px;
+     }
 
 
  }
@@ -1324,40 +1326,40 @@
 
  @media (max-width:800px) {
      #Avacado_image {
-        height: 230px;
-        width: 230px;
+         height: 230px;
+         width: 230px;
          margin-left: 10px;
 
      }
 
      #Healthy_Meal_image {
-        height: 230px;
-        width: 230px;
+         height: 230px;
+         width: 230px;
          margin-left: 10px;
 
      }
 
      #Healthy_Tacos_image {
-        height: 230px;
+         height: 230px;
          width: 230px;
          margin-left: 10px;
      }
 
      #Iridinos_image {
-        height: 230px;
-        width: 230px;
+         height: 230px;
+         width: 230px;
          margin-left: 10px;
      }
 
      #Keto_Diet_image {
-        height: 230px;
-        width: 230px;
+         height: 230px;
+         width: 230px;
          margin-left: 10px;
      }
 
      #Sandwich_image {
-        height: 230px;
-        width: 230px;
+         height: 230px;
+         width: 230px;
          margin-left: 10px;
      }
 
@@ -1366,44 +1368,44 @@
 
 
      #karahi_img {
-        height: 230px;
-        width: 230px;
+         height: 230px;
+         width: 230px;
          margin-left: 10px;
      }
 
 
      #tikka_img {
-        height: 230px;
-        width: 230px;
+         height: 230px;
+         width: 230px;
          margin-left: 10px;
      }
 
 
      #Bihari_img {
-        height: 230px;
-        width: 230px;
+         height: 230px;
+         width: 230px;
          margin-left: 10px;
      }
 
 
 
      #nuggets_img {
-        height: 230px;
-        width: 230px;
+         height: 230px;
+         width: 230px;
          margin-left: 10px;
      }
 
 
      #biryani_img {
-        height: 230px;
-        width: 230px;
+         height: 230px;
+         width: 230px;
          margin-left: 10px;
      }
 
 
      #malai_img {
-        height: 230px;
-        width: 230px;
+         height: 230px;
+         width: 230px;
          margin-left: 10px;
      }
 
@@ -1424,6 +1426,266 @@
 
      #cart_button button {
          margin-left: 15px;
+     }
+
+ }
+
+ /* contact */
+ .pic_contact {
+     background-image: linear-gradient(rgba(175, 169, 169, 0.534), rgba(175, 169, 169, 0.253), rgba(175, 169, 169, 0.253)), url(./assests/petr-sevcovic-e5Q5vWO55uU-unsplash.jpg);
+     height: 430px;
+     width: 100%;
+     background-size: cover;
+     background-position: bottom;
+ }
+
+ .Main_Div {
+     display: flex;
+     margin-left: 100px;
+     margin-top: 60px;
+
+ }
+
+ .main_div18 {
+     text-align: center;
+     margin-left: 15px;
+     justify-content: space-between;
+     padding-left: 60px;
+ }
+
+
+ #icon10 {
+     color: rgb(129, 167, 47);
+     font-size: 35px;
+ }
+
+ #icon11 {
+     color: rgb(129, 167, 47);
+     font-size: 35px;
+ }
+
+ #icon12 {
+     color: rgb(129, 167, 47);
+     font-size: 35px;
+ }
+
+ #icon13 {
+     color: rgb(129, 167, 47);
+     font-size: 35px;
+ }
+
+ #loc1 {
+     font-size: 13px;
+     color: rgba(0, 0, 0, 0.953);
+ }
+
+ #phone1 {
+     font-size: 13px;
+     color: rgba(0, 0, 0, 0.953);
+ }
+
+ #phone2 {
+     font-size: 13px;
+     color: rgba(0, 0, 0, 0.953);
+ }
+
+ #email1 {
+     font-size: 13px;
+     color: rgba(0, 0, 0, 0.953);
+ }
+
+ #email2 {
+     font-size: 13px;
+     color: rgba(0, 0, 0, 0.953);
+ }
+
+ #work1 {
+     font-size: 13px;
+     color: rgba(0, 0, 0, 0.953);
+ }
+
+ #work2 {
+     font-size: 13px;
+     color: rgba(0, 0, 0, 0.953);
+ }
+
+ .map iframe{
+    width: 96%;
+    margin-left: 25px;
+    margin-top: 80px;
+    height: 450px;
+    border: 2px solid rgba(0, 0, 0, 0.499);
+  }
+
+ #msg {
+     margin-left: 350px;
+ }
+
+
+ #childdiv87 {
+     margin-left: 10%;
+     margin-top: 30px;
+ }
+
+ #writename22 {
+     border-radius: 40px;
+     width: 900px;
+     height: 40px;
+     border: none;
+     padding-left: 30px;
+     margin-top: 30px;
+     background-color: rgba(0, 0, 0, 0.03);
+ }
+
+ input ::placeholder {
+     justify-content: center;
+ }
+
+ #email23 {
+     width: 900px;
+     height: 40px;
+     border: none;
+     border-radius: 40px;
+     padding-left: 30px;
+     background-color: rgba(0, 0, 0, 0.03);
+ }
+
+ input {
+     width: 200px;
+     padding: 10px;
+ }
+
+ textarea {
+     height: 120px;
+     width: 900px;
+     margin-top: 10px;
+     padding: 10px;
+     border: none;
+     border-radius: 40px;
+     padding-left: 30px;
+     padding-top: 20px;
+     background-color: rgba(0, 0, 0, 0.03);
+ }
+
+ #submit25 {
+     width: 200px;
+     height: 50px;
+     border: none;
+     border-radius: 40px;
+     padding-left: 5px;
+     color: aliceblue;
+     background-color: rgb(211, 53, 53);
+     font-size: 22px;
+     margin-left: 350px;
+ }
+
+ #submit25:hover {
+     background-color: rgba(19, 145, 19, 0.663);
+     color: black;
+ }
+
+
+ @media (max-width:400px) {
+     .Main_Div {
+
+         margin-left: 10px;
+         margin-top: 10px;
+         flex-wrap: wrap;
+     }
+
+     .main_div18 {
+         margin-left: 20px;
+         margin-top: 25px;
+         justify-content: space-between;
+         padding-left: 10px;
+     }
+
+     .main_div18 h3 {
+         margin-right: 200px;
+     }
+
+     #loc1 {
+         font-size: 13px;
+         padding-right: 130px;
+
+     }
+
+     #phone1 {
+         font-size: 13px;
+         padding-right: 180px;
+     }
+
+     #phone2 {
+         font-size: 13px;
+         padding-right: 180px;
+     }
+
+     #email1 {
+         font-size: 13px;
+         padding-right: 190px;
+     }
+
+     #email2 {
+         font-size: 13px;
+         padding-right: 190px;
+     }
+
+     #work1 {
+         font-size: 13px;
+         padding-right: 250px;
+
+     }
+
+     #work2 {
+         font-size: 13px;
+         padding-right: 250px;
+     }
+
+
+
+     #icon10 {
+         font-size: 40px;
+         padding-right: 230px;
+
+     }
+
+     #icon11 {
+         font-size: 35px;
+         padding-right: 230px;
+     }
+
+     #icon12 {
+         font-size: 38px;
+         padding-right: 210px;
+     }
+
+     #icon13 {
+         font-size: 40px;
+         padding-right: 270px;
+     }
+
+
+     #msg {
+         margin-left: 5px;
+     }
+
+
+     #writename22 {
+         width: 265px;
+     }
+
+     #email23 {
+         width: 265px;
+
+     }
+
+
+     textarea {
+         width: 265px;
+     }
+
+     #submit25 {
+         margin-left: 10px;
      }
 
  }
