--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@
  }
 
  .dropbtn4 {
-     color: white;
+  
      margin-top: 25px;
      padding: 13px;
      margin-right: 15px;
@@ -239,7 +239,17 @@
      border-radius: 30px;
      background-image: url(./assests/veg_pattern_01.png);
      background-color: rgb(142, 192, 56);
+
+    
  }
+
+ .dropbtn4 a {
+    color: #f9f9f9;
+    margin-left: 0px;
+    text-decoration: none;
+    display: block;
+    font-weight: bold;
+}
 
  .dropbtn4:hover {
      color: white;
